<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_menu_recent"
        android:title="@string/menu_recent" />
    <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_menu_favourite"
        android:title="@string/menu_favourite" />
    <item
        android:id="@+id/nav_tools"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_setting" />
</group>

    <item android:title="Информация">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_question"
                android:title="@string/menu_question" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
